fix bio text align

--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -43,6 +43,7 @@
     margin: 10px auto 10px;
   }
   .author_bio {
+    text-align: center;
     font-size: 90%;
     display: block;
   }
